[gd_scene load_steps=3 format=2]

[ext_resource path="res://Itens/Laser/LaserLauncher.gd" type="Script" id=1]
[ext_resource path="res://Itens/Laser/LaserLauncher.png" type="Texture" id=2]

[node name="LaserLauncher" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="WaitTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="ShootingTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]

[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]


